working on EQ model

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 ykfigures
 papers
+Thesis-Doctoral-Templates-All.doc
+thesis-ex-blx.bib
+thesis-ex.aux
+thesis-ex.bbl
+thesis-ex.blg
+thesis-ex.dvi
+thesis-ex.log
+thesis-ex.out
+thesis-ex.run.xml
+thesis-ex.synctex.gz
+thesis-ex.toc
